sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:9: error: too many arguments for method getTaillePile: ()Int
    if (i!=getTaillePile(-1)){
                        ^